welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: too many arguments for method estSurBiscuit: ()Boolean
{
^