welcome.lessons.welcome.variables.Variables.scala.code
var nbPas: Int=0

if (!estSurBiscuit)
{
	avance()
	nbPas=nbPas+1
} else(estSurBiscuit)
{
	prendBiscuit()
	recule(nbPas)
}
